--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "gcp-discord-bot",
-  "version": "0.0.1",
-  "description": "A Discord bot to provision Google Compute Engine VM Instances",
+  "name": "discord-bot-for-gcp",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "author": "kashifulhaque",
-  "license": "MIT",
-  "private": false,
-  "dependencies": {
-    "@google-cloud/compute": "^1.2.0",
-    "discord.js": "^12.2.0"
-  },
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@google-cloud/compute": "^3.5.0",
+    "discord.js": "^14.4.0"
   }
 }
